--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "start": "npx http-server -p ${PORT} ./dist",
-    "test:unit": "vue-cli-service test:unit",
+    "test:unit": "vue-cli-service test:unit --watch",
     "test:clear-cache": "node_modules/.bin/jest --clearCache"
   },
   "dependencies": {
@@ -34,7 +34,7 @@
     "vue-chartjs": "^4.1.2",
     "vue-router": "^4.1.5",
     "vue-toastification": "^2.0.0-rc.5",
-    "vuex": "^4.1.0",
+    "vuex": "^4.0.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -67,7 +67,7 @@
     ],
     "moduleNameMapper": {
       "^@/(.*)$": "<rootDir>/src/$1",
-      "/images/(.*)$": "<rootDir>/public/images/$1",
+      "/images/(.*)$": "<rootDir>/src/assets/img/$1",
       "\\.(css|less|scss|sass)$": "identity-obj-proxy",
       "axios": "axios/dist/node/axios.cjs"
     },
