--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "test:clear-cache": "node_modules/.bin/jest --clearCache"
   },
   "dependencies": {
+
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
@@ -41,6 +42,7 @@
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
+    "eslint-plugin-jest": "^24.3.6",
     "@vue/cli-plugin-unit-jest": "^5.0.8",
     "@vue/cli-service": "~5.0.0",
     "autoprefixer": "^10.4.13",
@@ -102,6 +104,9 @@
       {
         "files": [
           "**/src/**/*.spec.js"
+        ],
+        "plugins": [
+          "jest"
         ],
         "extends": [
           "plugin:jest/recommended"
