--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -3,11 +3,11 @@ server.servlet.context-path=/
 logging.level.org.springframework = info
 server.error.include-message=always
 
-# setting the database connection for development database
-#spring.jpa.database=mysql
-#spring.datasource.url=jdbc:mysql://localhost:3306/smartship_personal
-#spring.datasource.username=root
-#spring.datasource.password=Bartlomiej8!
+ setting the database connection for development database
+spring.jpa.database=mysql
+spring.datasource.url=jdbc:mysql://localhost:3306/smartship_personal
+spring.datasource.username=root
+spring.datasource.password=Bartlomiej8!
 #
 #spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MySQL8Dialect
 #spring.jpa.hibernate.ddl-auto= update
@@ -48,12 +48,12 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 # setting the database connection for in memory database
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
-# configure hibernate logging
-logging.level.org.hibernate=error
-spring.jpa.show-sql=true
-
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-pring.jpa.properties.hibernate.connection.charSet=UTF-8
-spring.jpa.properties.hibernate.hbm2ddl.import_files_sql_extractor=org.hibernate.tool.hbm2ddl.MultipleLinesSqlCommandExtractor
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:testdb
+## configure hibernate logging
+#logging.level.org.hibernate=error
+#spring.jpa.show-sql=true
+#
+#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+#pring.jpa.properties.hibernate.connection.charSet=UTF-8
+#spring.jpa.properties.hibernate.hbm2ddl.import_files_sql_extractor=org.hibernate.tool.hbm2ddl.MultipleLinesSqlCommandExtractor
