--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,74 @@
     "lint": "vue-cli-service lint",
     "start": "npx http-server -p ${PORT} ./dist",
     "test:unit": "vue-cli-service test:unit",
+    "test:clear-cache": "node_modules/.bin/jest --clearCache",
+    "test": "jest"
+  },
+  "name": "jest-setup",
+  "version": "22.1.0",
+  "private": true,
+  "scripts": {
+    "lint": "vue-cli-service lint",
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "check versions": "npm outdated",
+    "update": "npm update --save",
+    "audit": "npm audit fix",
+    "test:unit": "vue-cli-service test:unit",
     "test:clear-cache": "node_modules/.bin/jest --clearCache"
   },
+  "devDependencies": {
+    "@babel/core": "^7.19.1",
+    "@babel/eslint-parser": "^7.19.1",
+    "@vue/cli-plugin-babel": "^5.0.8",
+    "@vue/cli-plugin-eslint": "^5.0.8",
+    "@vue/cli-plugin-router": "^5.0.8",
+    "@vue/cli-service": "^5.0.8",
+    "eslint": "^7.32.0",
+    "eslint-plugin-vue": "^8.7.1",
+    "@vue/cli-plugin-unit-jest": "^5.0.8",
+    "@vue/test-utils": "^2.0.2",
+    "@vue/vue3-jest": "^27.0.0-alpha.4",
+    "babel-jest": "^27.5.1",
+    "jest": "^27.5.1"
+  },
+
+  "jest": {
+    "preset": "@vue/cli-plugin-unit-jest",
+    "testMatch": [
+      "/src//.spec.js"
+    ],
+    "verbose": true
+  },
+  "eslintConfig": {
+    "root": true,
+    "extends": [
+      "plugin:vue/vue3-essential",
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "@babel/eslint-parser"
+    },
+    "rules": {},
+    "env": {
+      "node": true,
+      "jest": true
+    },
+    "overrides": [ {
+      "files": [ "/src//.spec.js" ]
+    }]
+  },
+  "dependencies": {
+    "core-js": "^3.25.2",
+    "vue": "^3.2.13",
+    "vue-router": "^4.1.5"
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead",
+    "not ie 11"
+  ],
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
@@ -41,6 +107,7 @@
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
+    "eslint-plugin-jest": "^24.3.6",
     "@vue/cli-plugin-unit-jest": "^5.0.8",
     "@vue/cli-service": "~5.0.0",
     "autoprefixer": "^10.4.13",
@@ -51,12 +118,7 @@
     "@vue/test-utils": "^2.0.2",
     "@vue/vue3-jest": "^27.0.0-alpha.4",
     "jest-expect-message": "^1.1.2",
-    "babel-jest": "^27.5.1",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "jest": "^27.5.1",
-    "postcss": "^8.4.18",
-    "tailwindcss": "^3.2.1"
+    "babel-jest": "^27.5.1"
   },
   "jest": {
     "preset": "@vue/cli-plugin-unit-jest",
