--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -3,20 +3,21 @@ server.servlet.context-path=/
 logging.level.org.springframework = info
 server.error.include-message=always
 
-spring.jpa.database=mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/smartship?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=rootroot
-
-spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto= update
-spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+# setting the database connection for development database
+#spring.jpa.database=mysql
+#spring.datasource.url=jdbc:mysql://localhost:3306/smartship_personal
+#spring.datasource.username=root
+#spring.datasource.password=Bartlomiej8!
+#
+#spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.hibernate.ddl-auto= update
+#spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 
 # App Properties
 server.app.jwtSecret= bezKoderSecretKey
 server.app.jwtExpirationMs= 6400000
 
-# setting the database
+# setting the database connection for production database
 # note: dialects are auto detected by hibernate
 #spring.datasource.url=jdbc:mysql://oege.ie.hva.nl:3306/ztyniorb
 #spring.datasource.username=tyniorb
@@ -25,20 +26,19 @@ server.app.jwtExpirationMs= 6400000
 # drop and create table again, good for testing, comment this in production
 #spring.jpa.hibernate.ddl-auto=create-drop
 
-# used to initialise the db with data
-spring.sql.init.mode=always
-spring.jpa.defer-datasource-initialization=true
-#spring.sql.init.data-locations=classpath:/data.sql
-
-# turn statistics on
-spring.jpa.properties.hibernate.generate_statistics=true
-logging.level.org.hibernate.stat=debug
-
-# show all queries for debugging purposes
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.type=trace
-
+## used to initialise the db with data
+#spring.sql.init.mode=always
+#spring.jpa.defer-datasource-initialization=true
+##spring.sql.init.data-locations=classpath:/data.sql
+#
+## turn statistics on
+#spring.jpa.properties.hibernate.generate_statistics=true
+#logging.level.org.hibernate.stat=debug
+#
+## show all queries for debugging purposes
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#logging.level.org.hibernate.type=trace
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -46,3 +46,14 @@ spring.mail.username=btynior@gmail.com
 spring.mail.password=djfjsdzctgpxpaaf
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+# setting the database connection for in memory database
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:testdb
+# configure hibernate logging
+logging.level.org.hibernate=error
+spring.jpa.show-sql=true
+
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+pring.jpa.properties.hibernate.connection.charSet=UTF-8
+spring.jpa.properties.hibernate.hbm2ddl.import_files_sql_extractor=org.hibernate.tool.hbm2ddl.MultipleLinesSqlCommandExtractor
