--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,20 +1,9 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "start": "npx http-server -p ${PORT} ./dist",
-    "test:unit": "vue-cli-service test:unit",
-    "test:clear-cache": "node_modules/.bin/jest --clearCache",
-    "test": "jest"
-  },
   "name": "jest-setup",
   "version": "22.1.0",
   "private": true,
   "scripts": {
+    "test": "jest",
     "lint": "vue-cli-service lint",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -25,101 +14,22 @@
     "test:clear-cache": "node_modules/.bin/jest --clearCache"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.1",
-    "@babel/eslint-parser": "^7.19.1",
-    "@vue/cli-plugin-babel": "^5.0.8",
-    "@vue/cli-plugin-eslint": "^5.0.8",
-    "@vue/cli-plugin-router": "^5.0.8",
-    "@vue/cli-service": "^5.0.8",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.7.1",
-    "@vue/cli-plugin-unit-jest": "^5.0.8",
-    "@vue/test-utils": "^2.0.2",
-    "@vue/vue3-jest": "^27.0.0-alpha.4",
-    "babel-jest": "^27.5.1",
-    "jest": "^27.5.1"
-  },
-
-  "jest": {
-    "preset": "@vue/cli-plugin-unit-jest",
-    "testMatch": [
-      "/src//.spec.js"
-    ],
-    "verbose": true
-  },
-  "eslintConfig": {
-    "root": true,
-    "extends": [
-      "plugin:vue/vue3-essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "@babel/eslint-parser"
-    },
-    "rules": {},
-    "env": {
-      "node": true,
-      "jest": true
-    },
-    "overrides": [ {
-      "files": [ "/src//.spec.js" ]
-    }]
-  },
-  "dependencies": {
-    "core-js": "^3.25.2",
-    "vue": "^3.2.13",
-    "vue-router": "^4.1.5"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead",
-    "not ie 11"
-  ],
-  "dependencies": {
-
-    "@fortawesome/fontawesome-svg-core": "^6.2.0",
-    "@fortawesome/free-brands-svg-icons": "^6.2.0",
-    "@fortawesome/free-regular-svg-icons": "^6.2.0",
-    "@fortawesome/free-solid-svg-icons": "^6.2.0",
-    "@fortawesome/vue-fontawesome": "^3.0.1",
-    "@vueuse/core": "^9.9.0",
-    "@vueuse/motion": "^2.0.0-beta.12",
-    "axios": "^1.1.3",
-    "chart.js": "^3.9.1",
-    "click-outside-vue3": "^4.0.1",
-    "core-js": "^3.8.3",
-    "http_common": "^1.0.3",
-    "http-server": "^14.1.1",
-    "leaflet": "^1.9.3",
-    "leaflet-ptv-developer": "^1.0.2",
-    "libre": "^0.2.7",
-    "maplibre-gl": "^2.4.0",
-    "vee-validate": "^4.7.1",
-    "vue": "^3.2.13",
-    "vue-chartjs": "^4.1.2",
-    "vue-router": "^4.1.5",
-    "vue-toastification": "^2.0.0-rc.5",
-    "vuex": "^4.1.0",
-    "yup": "^0.32.11"
-  },
-  "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
-    "eslint-plugin-jest": "^24.3.6",
     "@vue/cli-plugin-unit-jest": "^5.0.8",
     "@vue/cli-service": "~5.0.0",
-    "autoprefixer": "^10.4.13",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "postcss": "^8.4.18",
-    "tailwindcss": "^3.2.1",
     "@vue/test-utils": "^2.0.2",
     "@vue/vue3-jest": "^27.0.0-alpha.4",
+    "autoprefixer": "^10.4.13",
+    "babel-jest": "^27.5.1",
+    "eslint": "^7.32.0",
+    "eslint-plugin-jest": "^24.3.6",
+    "eslint-plugin-vue": "^8.0.3",
     "jest-expect-message": "^1.1.2",
-    "babel-jest": "^27.5.1"
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.1"
   },
   "jest": {
     "preset": "@vue/cli-plugin-unit-jest",
@@ -138,8 +48,7 @@
     "transform": {
       "^.+\\.js$": "babel-jest",
       "^.+\\.vue$": "@vue/vue3-jest",
-      "^.+\\.(jpg|jpeg|png|gif|svg|mp3|mp4|mpeg)$":
-      "<rootDir>/jest-media-transformer.js"
+      "^.+\\.(jpg|jpeg|png|gif|svg|mp3|mp4|mpeg)$": "<rootDir>/jest-media-transformer.js"
     },
     "verbose": false
   },
@@ -164,7 +73,12 @@
       "vue/no-mutating-props": "off",
       "no-unused-vars": "off",
       "no-unreachable": "off",
-      "jest/valid-expect": [ "error", { "maxArgs": 2 } ]
+      "jest/valid-expect": [
+        "error",
+        {
+          "maxArgs": 2
+        }
+      ]
     },
     "overrides": [
       {
@@ -179,6 +93,36 @@
         ]
       }
     ]
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-brands-svg-icons": "^6.2.0",
+    "@fortawesome/free-regular-svg-icons": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/vue-fontawesome": "^3.0.1",
+    "@vueuse/core": "^9.9.0",
+    "@vueuse/motion": "^2.0.0-beta.12",
+    "axios": "^1.1.3",
+    "chart.js": "^3.9.1",
+    "click-outside-vue3": "^4.0.1",
+    "core-js": "^3.8.3",
+    "font-awesome": "^4.7.0",
+    "http_common": "^1.0.3",
+    "http-server": "^14.1.1",
+    "istanbul": "^0.4.5",
+    "leaflet": "^1.9.3",
+    "leaflet-ptv-developer": "^1.0.2",
+    "libre": "^0.2.7",
+    "maplibre-gl": "^2.4.0",
+    "test-utils": "^1.1.1",
+    "v-motion": "^1.0.2",
+    "vee-validate": "^4.7.1",
+    "vue": "^3.2.13",
+    "vue-chartjs": "^4.1.2",
+    "vue-router": "^4.1.5",
+    "vue-toastification": "^2.0.0-rc.5",
+    "vuex": "^4.1.0",
+    "yup": "^0.32.11"
   },
   "browserslist": [
     "> 1%",
